# cp2077-red-filesystem

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bundle.mjs  install.mjs  red.config.json
examples/: FileSystemExample.lua  FileSystemExample.reds
examples/cet/: init.lua
examples/redscript/: AwesomeEnv.reds  AwesomeService.reds  AwesomeSystem.reds
include/: RedFileSystem.hpp
include/src/: AsyncFile.hpp  Enums.hpp  File.hpp  FilePromise.hpp  FileSystem.hpp  FileSystemStorage.hpp
scripts/RedFS/: File.reds  FileSystem.reds  FileSystemTest.reds  test.txt
scripts/RedFS/Enums/: FileSystemStatus.reds
scripts/RedFS/Json/: JsonObject.reds  JsonVariant.reds
scripts/RedFileSystem/: AsyncFile.reds  File.reds  FilePromise.reds  FileSystem.reds  FileSystemStatus.reds  FileSystemStorage.reds  FileSystemTest.reds  FileSystemWriteMode.reds  test.json
scripts/RedFileSystem/Enum/: FileSystemPrefix.reds
scripts/RedFileSystem/Enums/: FileSystemWriteMode.reds
scripts/RedFileSystem/Json/: JsonArray.reds  JsonObject.reds
scripts/RedFileSystem/Test/: AsyncFileTest.reds  FileSystemStorageTest.reds  FileSystemTest.reds  FileTest.reds  JsonArrayTest.reds  JsonBaseTest.reds  JsonObjectTest.reds  Main.reds  RedFSTest.reds  test.json
src/: AsyncFile.cpp  AsyncFile.h  Config.h.in  File.cpp  File.h  FilePromise.h  FileSystem.cpp  FileSystem.h  FileSystemPrefix.h  FileSystemStatus.h  FileSystemStorage.cpp  FileSystemStorage.h  FileSystemWriteMode.h  Plugin.cpp  Plugin.h  Utils.h  main.cpp
src/json/: JsonArray.cpp  JsonArray.h  JsonBool.cpp  JsonBool.h  JsonDouble.cpp  JsonDouble.h  JsonFactory.h  JsonInt64.cpp  JsonInt64.h  JsonNull.cpp  JsonNull.h  JsonObject.cpp  JsonObject.h  JsonString.cpp  JsonString.h  JsonType.h  JsonVariant.cpp  JsonVariant.h
